# maxim-contracts

./: .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
migrations/: deploy.ts
programs/maxim_protocol/: Cargo.toml
programs/maxim_protocol/src/: errors.rs  lib.rs
programs/maxim_protocol/src/state/: agent_wallet.rs  mod.rs  payment_record.rs  protocol_config.rs  spend_policy.rs
scripts/: seed.ts
